Ajustes na geracao de guias em lote