@@ -1,10 +1,8 @@
 package br.com.grerj.automatizado;
 
 import br.com.grerj.BaseGrerjAutomatizado;
-import br.com.grerj.enumerators.ElementBy;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
@@ -18,10 +16,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.logging.Logger;
-import java.util.stream.IntStream;
 
-import static br.com.grerj.automatizado.WebDriverFindElements.*;
+import static br.com.grerj.automatizado.WebDriverFindElements.webDriverElements;
 import static br.com.grerj.enumerators.ElementBy.*;
 
 public class GrerjAutomatizadoTest extends BaseGrerjAutomatizado {
@@ -33,16 +31,19 @@ public class GrerjAutomatizadoTest extends BaseGrerjAutomatizado {
         this.webDriver = new ChromeDriver();
         this.webDriver.manage().window().maximize();
     }
+
     @AfterAll
-    public static void afterAll(){
+    public static void afterAll() {
         nroGrerjCollection.stream().forEach(System.out::println);
         try {
             Path path = new File("%s\\src\\test\\resources\\test-resources-%s.txt".formatted(mainPath.toString(), System.currentTimeMillis())).toPath();
             Path file = Path.of(path.toUri());
             if (Files.notExists(file)) Files.createFile(file);
             StringBuilder values = new StringBuilder();
-            nroGrerjCollection.stream().forEach(value -> values.append(value));
-            Files.write(file, values.toString().getBytes(StandardCharsets.UTF_8));
+            nroGrerjCollection.stream().forEach(value -> {
+                values.append(value).append(System.lineSeparator());
+            });
+            Files.writeString(file, values.toString(), StandardCharsets.UTF_8);
         } catch (IOException ex) {
             Logger.getLogger(GrerjAutomatizadoTest.class.getSimpleName(), ex.getMessage());
         }
@@ -79,21 +80,13 @@ public class GrerjAutomatizadoTest extends BaseGrerjAutomatizado {
 
     private void processoJudicialCalculoAliquota() {
         final WebElement tableValueGRERJ = webDriverElements.executeFindElements(webDriver, XPATH, "(//table[@class='table table-striped table-bordered table-hover'])[1]", false);
-        WebElement textValue = tableValueGRERJ.findElement(By.xpath("(//tbody)[1]"))
-                .findElement(By.xpath("(//tr)[2]"))
-                .findElement(By.xpath("(//td)[3]"))
-                .findElement(By.xpath("(//div)[49]"))
-                .findElement(By.xpath("(//input[@autocomplete='off'])[1]"));
+        WebElement textValue = tableValueGRERJ.findElement(By.xpath("(//tbody)[1]")).findElement(By.xpath("(//tr)[2]")).findElement(By.xpath("(//td)[3]")).findElement(By.xpath("(//div)[49]")).findElement(By.xpath("(//input[@autocomplete='off'])[1]"));
         textValue.click();
         textValue.sendKeys("1,00");
         threadSleep.get();
 
         final WebElement tableCalculoAliquota = webDriverElements.executeFindElements(webDriver, XPATH, "(//table[@class='table table-striped table-bordered table-hover'])[2]", false);
-        WebElement textValueTotal = tableCalculoAliquota.findElement(By.xpath("(//tbody)[2]"))
-                .findElement(By.xpath("(//tr[@class='ng-star-inserted'])[1]"))
-                .findElement(By.xpath("(//td)[7]"))
-                .findElement(By.xpath("(//div)[50]"))
-                .findElement(By.xpath("(//input[@autocomplete='off'])[2]"));
+        WebElement textValueTotal = tableCalculoAliquota.findElement(By.xpath("(//tbody)[2]")).findElement(By.xpath("(//tr[@class='ng-star-inserted'])[1]")).findElement(By.xpath("(//td)[7]")).findElement(By.xpath("(//div)[50]")).findElement(By.xpath("(//input[@autocomplete='off'])[2]"));
         textValueTotal.click();
         textValueTotal.clear();
         textValueTotal.sendKeys("1,00");
@@ -101,11 +94,7 @@ public class GrerjAutomatizadoTest extends BaseGrerjAutomatizado {
         tableCalculoAliquota.click();
         threadSleep.get();
 
-        tableCalculoAliquota.findElement(By.xpath("(//tbody)[3]"))
-                .findElement(By.xpath("(//tr)[12]"))
-                .findElement(By.xpath("(//td)[40]"))
-                .findElement(By.xpath("(//i[@class='fa fa-calculator fa-fw'])[1]"))
-                .click();
+        tableCalculoAliquota.findElement(By.xpath("(//tbody)[3]")).findElement(By.xpath("(//tr)[12]")).findElement(By.xpath("(//td)[40]")).findElement(By.xpath("(//i[@class='fa fa-calculator fa-fw'])[1]")).click();
         threadSleep.get();
         webDriverElements.executeFindElements(this.webDriver, XPATH, "(//button[@type='submit'])[1]", true);
 
@@ -116,15 +105,17 @@ public class GrerjAutomatizadoTest extends BaseGrerjAutomatizado {
         String nroGrerj = webDriver.findElement(By.id("numero-grerj")).getDomProperty("value");
         nroGrerjCollection.add(nroGrerj);
         threadSleepTransition.get();
-
-        webDriver.close();
-        webDriver.quit();
     }
 
-    @RepeatedTest(value = 2)
-    public void automatizarGeracaoGuia() {
-        this.processoJudicialCabecalho();
-        this.processoJudicialCustas();
-        this.processoJudicialCalculoAliquota();
+    @Test
+    public void automatizarGeracaoGuiaInicial() {
+        int max = Objects.nonNull(System.getenv("totalGuias")) ? Integer.valueOf(System.getenv("totalGuias")) : 2;
+        for (int i = 0; i < max; i++) {
+            this.processoJudicialCabecalho();
+            this.processoJudicialCustas();
+            this.processoJudicialCalculoAliquota();
+        }
+        this.webDriver.close();
+        this.webDriver.quit();
     }
 }
